--- a/index.html
+++ b/index.html
@@ -15,18 +15,8 @@
         </div>
     </header>
     
-    <main id="main">
-        <div class="cards">
-            <div>
-                <img id="movieImg" src="#none">
-            </div>
-            <div id="movieTitle">
-                title
-            </div>
-            <div id="movieRate">
-                rate
-            </div>
-        </div>
+    <main id="cards">
+        <div></div>
     </main>
     
     <script src="script.js"></script>
