add 검색 기능 구현중

--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
     <header>
         <div class="title">
             <h1>영화 검색</h1>
-            <input type= "text" id= "search-input" placeholder="영화 제목을 입력해 주세요.">
+            <input type= "text" id= "search" placeholder="영화 제목을 입력해 주세요."><button id="search-btn">검색</button>
             <button>북마크 추가</button>
         </div>
     </header>
     
-    <main id="cards">
-        <div></div>
-    </main>
+    <main id="cards"></main>
     
     <script src="script.js"></script>
 </body>
