Add 검색 기능 구현

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jin's movie project</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header></header>
         <div class="title">
             <h1>영화 검색</h1>
             <input type= "text" id= "search" placeholder="영화 제목을 입력해 주세요."><button id="search-btn">검색</button>
